--- a/tabla.html
+++ b/tabla.html
@@ -28,19 +28,20 @@
                 <th colspan="2"> Cabecera</th>
             </tr>
             <tr>
-                <td > Fila 1</td>
-                <td> Celda 2 filas</td>
+                <td>Primera Col. Cab</td>
+                <td> Segunda Col Cab</td>
             </tr>
             <tr>
                 <td>Fila 1</td>
-                <td> Fila 2 col 2</td>
-                <td> Fila 3 col 3</td>
+                <td > Fila 1 Col 1</td>
+                <td> Fila 1 Col 2</td>
             </tr>
             <tr>
                 <td> Fila 2</td>
-                <td> Fila 4</td>
-                <td> fila 5</td>
+                <td> Fila 2 col 1</td>
+                <td> Fila 2 col 2</td>
             </tr>
+          
             <tr> 
                 <th colspan="3">Pie de pagina </th>
             </tr>
