actualizacion datos tabla, formato paginas

--- a/iframe.html
+++ b/iframe.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
         <title>Etiqueta Iframe</title>
         
-        <link href="ct_base.css" rel="stylesheet" />
-        <link href="ct_layout2.css" rel="stylesheet" />
     </head>
     <body>
             <header>
-                    <a href="index.html"><img src="Imagenes/logotipo.png" alt="Noticias al Instante" /></a> 
+                    <a href="index.html"><img src="Imagenes/logotipo.png" width="1500px" height="500px" alt="Noticias al Instante" /></a> 
                     <br/>  <br/>
                  <nav>
                     <ul>
@@ -31,6 +29,5 @@
             width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>    
 
 
-    
     </body>
 </html>
