--- a/social.html
+++ b/social.html
@@ -3,12 +3,10 @@
     <head>
         <title>Social</title>
         <meta charset="utf-8" />
-        <link href="ct_base.css" rel="stylesheet" />
-        <link href="ct_layout2.css" rel="stylesheet" />
     </head>
     <body>
         <header>
-                <a href="index.html"><img src="Imagenes/logotipo.png" alt="Noticias al Instante" /></a> 
+                <a href="index.html"><img src="Imagenes/logotipo.png" width="1500px" height="500px" alt="Noticias al Instante" /></a> 
                 <br/>  <br/> 
              <nav>
                 <ul>
@@ -31,9 +29,11 @@
                     <br/>
                     Él como sus otros dos compañeros, que también son bachilleres, llevan apellidos mestizos, acompañados de sus apelativos
                      de la nacionalidad.
-                    
+            </p>
+                   <img src="Imagenes/social.PNG"width="800px" height="500px" alt=""/>  
             <p>
-                    En un estudio entregado a la gobernadora se detalló que la nacionalidad está en riesgo de desaparecer. Esto lo afirman <img src="Imagenes/social.PNG" alt=""/>
+                    En un estudio entregado a la gobernadora se detalló que la nacionalidad está en riesgo de desaparecer. Esto lo afirman 
+                   
                     los expertos en el tema en  un análisis que hicieron al Kasama del 2018, donde se detalla que muchos de los integrantes 
                     de la etnia ya no utilizan la vestimenta, no hablan la lengua tsáfiqui y tampoco se alimentan con los productos originarios,
                      como el verde. Aguavil manifiesta que un estudio revela que en 15 y 20 años más la nacionalidad desaparecería del mapa del Ecuador  
