--- a/entretenimiento.html
+++ b/entretenimiento.html
@@ -3,12 +3,10 @@
     <head>
         <title>Entretenimiento</title>
         <meta charset="utf-8" />
-        <link href="ct_base.css" rel="stylesheet" />
-        <link href="ct_layout2.css" rel="stylesheet" />
     </head>
     <body>
         <header>
-                <a href="index.html"><img src="Imagenes/logotipo.png" alt="Noticias al Instante" /></a> 
+                <a href="index.html"><img src="Imagenes/logotipo.png" width="1500px" height="500px" alt="Noticias al Instante" /></a> 
                 <br/>  <br/>
              <nav>
                 <ul>
@@ -28,8 +26,9 @@
            <p>
                 Con ya siete películas, el Universo Extendido de DC finalmente está volando con algo de viento a su favor. "Shazam!", una película con presupuesto modesto que ha recibido buenas críticas, debutó con 53,5 millones de dólares durante 
                 el fin de semana en las taquillas de Estados Unidos y Canadá.
-                <img src="Imagenes/shazam.PNG" alt="" />
+               
            </p>
+            <img src="Imagenes/shazam.PNG" width="800px" height="500px" alt="" />
            <p>
                 "Shazam!", que se benefició de críticas favorables, superó las expectativas, que anticipaban un debut con entre 40 millones y 45 millones de dólares. La película también obtuvo 3 millones de dólares por proyecciones anticipadas.
            </p>
