--- a/tabla.html
+++ b/tabla.html
@@ -3,8 +3,6 @@
         <head>
                 <title>Tabla Contenidos </title>
                 <meta charset="utf-8" />
-                <link href="ct_base.css" rel="stylesheet" />
-                <link href="ct_layout2.css" rel="stylesheet" />
             </head>
     <body>
             <header>
@@ -41,10 +39,31 @@
                 <td> Fila 2 col 1</td>
                 <td> Fila 2 col 2</td>
             </tr>
-          
             <tr> 
                 <th colspan="3">Pie de pagina </th>
             </tr>
+        </table>
+        <br/>
+        <table border="1">
+            <tr>
+                <th rowspan="2" >Temporada</th>
+                <th rowspan="2" >Fechas</th>
+                <th colspan="2" > Clubes</th>
+                <th> Valor </th>
+            </tr>
+            <tr>
+                <td> Ultimo Club</td>
+                <td> Nuevo Club</td>
+                <td> </td>
+            </tr>
+            <tr>
+                <td> 18/19</td>
+                <td>20/03/2019</td>
+                <td><img src="Imagenes/sanMartin.PNG" alt=""> Martin</td>
+                <td>Independiente</td>
+                <td> 450 $</td>
+            </tr>
+
         </table>
     </body>
 </html>
