--- a/deportes.html
+++ b/deportes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>Deportes al Dia</title>
         <meta charset="utf-8" />
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-                <a href="index.html"><img src="Imagenes/logotipo.png" width="1500px" height="500px" alt="Noticias al Instante" /></a> 
+                <a href="index.html"><img src="Imagenes/logotipo.png" width="1500" height="500" alt="Noticias al Instante" /></a> 
                 <br/>  <br/>
              <nav>
                 <ul>
@@ -24,7 +24,7 @@
         </header>
         <article>
             <h1> Ind. del Valle se adueñó del liderato de la LigaPro al vencer a 1-0 a Fuerza Amarilla </h1>
-            <img src="Imagenes/deporte.PNG" width="1000px" height="500px" alt="" />
+            <img src="Imagenes/deporte.PNG" width="1000" height="500" alt="" />
             <p><strong>Independiente del Valle</strong> venció este domingo 7 de abril del 2019, 1-0 a Fuerza Amarilla, en Machala, pero el marcador pudo ser más abultado. 
                 El equipo sangolquileño falló algunas opciones claras frente al pórtico y debió conformarse con el tanto de Anthony Landázuri, en el minuto 50
             </p>
