--- a/entretenimiento.html
+++ b/entretenimiento.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>Entretenimiento</title>
         <meta charset="utf-8" />
     </head>
     <body>
         <header>
-                <a href="index.html"><img src="Imagenes/logotipo.png" width="1500px" height="500px" alt="Noticias al Instante" /></a> 
+                <a href="index.html"><img src="Imagenes/logotipo.png" width="1500" height="500" alt="Noticias al Instante" /></a> 
                 <br/>  <br/>
              <nav>
                 <ul>
@@ -28,7 +28,7 @@
                 el fin de semana en las taquillas de Estados Unidos y Canadá.
                
            </p>
-            <img src="Imagenes/shazam.PNG" width="800px" height="500px" alt="" />
+            <img src="Imagenes/shazam.PNG" width="800" height="500" alt="" />
            <p>
                 "Shazam!", que se benefició de críticas favorables, superó las expectativas, que anticipaban un debut con entre 40 millones y 45 millones de dólares. La película también obtuvo 3 millones de dólares por proyecciones anticipadas.
            </p>
