--- a/social.html
+++ b/social.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>Social</title>
         <meta charset="utf-8" />
     </head>
     <body>
         <header>
-                <a href="index.html"><img src="Imagenes/logotipo.png" width="1500px" height="500px" alt="Noticias al Instante" /></a> 
+                <a href="index.html"><img src="Imagenes/logotipo.png" width="1500" height="500" alt="Noticias al Instante" /></a> 
                 <br/>  <br/> 
              <nav>
                 <ul>
@@ -30,7 +30,7 @@
                     Él como sus otros dos compañeros, que también son bachilleres, llevan apellidos mestizos, acompañados de sus apelativos
                      de la nacionalidad.
             </p>
-                   <img src="Imagenes/social.PNG"width="800px" height="500px" alt=""/>  
+                   <img src="Imagenes/social.PNG" width="800" height="500" alt=""/>  
             <p>
                     En un estudio entregado a la gobernadora se detalló que la nacionalidad está en riesgo de desaparecer. Esto lo afirman 
                    
