--- a/iframe.html
+++ b/iframe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <meta charset="utf-8" />
         <title>Etiqueta Iframe</title>
@@ -7,7 +7,7 @@
     </head>
     <body>
             <header>
-                    <a href="index.html"><img src="Imagenes/logotipo.png" width="1500px" height="500px" alt="Noticias al Instante" /></a> 
+                    <a href="index.html"><img src="Imagenes/logotipo.png" width="1500" height="500" alt="Noticias al Instante" /></a> 
                     <br/>  <br/>
                  <nav>
                     <ul>
@@ -26,7 +26,7 @@
             La Universidad Politecnica Salesiana se encuentra ubicada en la calle vieja, Cuenca
         </p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3984.7547491775895!2d-78.9914454852807!3d-2.8869247978972328!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91cd1826d90c7e47%3A0x8eb47b6b0138cb74!2sUniversidad+Polit%C3%A9cnica+Salesiana+del+Ecuador!5e0!3m2!1ses!2sec!4v1554751448126!5m2!1ses!2sec" 
-            width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>    
+            width="600" height="450"  style="border:0" allowfullscreen></iframe>    
 
 
     </body>
