--- a/politica.html
+++ b/politica.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>Actualidad Politica</title>
         <meta charset="utf-8" />
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="Imagenes/logotipo.png" width="1500px" height="500px" alt="Noticias al Instante" /></a> 
+            <a href="index.html"><img src="Imagenes/logotipo.png" width="1500" height="500" alt="Noticias al Instante" /></a> 
             <br/>  <br/>
              <nav>
                 <ul>
@@ -21,10 +21,10 @@
             </nav>
         </header>
         <article>
-            <h1>Proponen que candidatos con baja votacion retornen dinero</h1>
+            <h3>Proponen que candidatos con baja votacion retornen dinero</h3>
             <p>
                     La mañana de este 5 de abril de 2019, uno de los consejeros del Consejo Nacional Electoral (CNE), Luis Verdesoto, dio a conocer sus propuestas de reformas para el Código de la Democracia.
-                    <img src="Imagenes/politica.PNG" width="800px" height="500px" alt="" />
+                    <img src="Imagenes/politica.PNG" width="800" height="500" alt="" />
 
                 </p>
             <p>
@@ -37,7 +37,7 @@
             <p>
                     Verdesoto manifestó que con estas reformas buscan "nuevos modelos de partidos políticos, con mecanismos de democracia interna, formación y renovación de cuadros: militantes y afiliados, que construyan su 
                     trayectoria con estabilidad y sin improvisaciones".
-                    <img src="Imagenes/politica_twiter.PNG"width="800px" height="500px"  alt="" />
+                    <img src="Imagenes/politica_twiter.PNG" width="800" height="500"  alt="" />
                 </p>
                 <p>
                         La reforma al Código de la Democracia ha sido enfocada en seis grandes capítulos que responden a un diagnóstico hecho por analistas. “Necesitamos razonar con serenidad sobre qué tipo de reformas institucionales requiere el país”, concluyó el funcionario 
