--- a/tecnologia.html
+++ b/tecnologia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es"> 
     <head>
         <title>Tecnologia</title>
         <meta charset="utf-8" />
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-                <a href="index.html"><img src="Imagenes/logotipo.png" width="1500px" height="500px" alt="Noticias al Instante" /></a> 
+                <a href="index.html"><img src="Imagenes/logotipo.png" width="1500" height="500" alt="Noticias al Instante" /></a> 
                 <br/>  <br/>        
              <nav>
                 <ul>
@@ -23,7 +23,7 @@
         </header>
         <article>
             <h1> Intel acaba de anunciar una bestia de procesador de 56 núcleos</h1>
-            <img src="Imagenes/procesador.PNG" width="600px" height="500px" alt=""/>
+            <img src="Imagenes/procesador.PNG" width="600" height="500" alt=""/>
             <p>Hace casi tres meses que <strong>Intel lazo su Intel Xeon W-3175X</strong> un procesador de 28 núcleos y 56 hilos que, hasta ahora, era el chip más potente de la compañía
             No obstante, la compañia acaba de anunciar el nuevo <strong>Xeon Platinum 900</strong>, que sube hasta los 56 nucleos y 112 hilos de procesamiento para machacar cargas de trabajo
             Por si estas cifras no lo dejan bastante claro, quede claro que tratándose de un Xeon la cosa está pensada para servidores y centros de datos, no para equipos caseros o jugadores. 
